--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "build": "eleventy",
-    "serve": "eleventy --serve",
+    "serve": "run-p eleventy-serve netlify-proxy",
+    "eleventy-serve": "eleventy --serve",
+    "netlify-proxy": "netlify-cms-proxy-server",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "prettier --check .",
     "lint:fix": "prettier --write ."
@@ -25,6 +27,8 @@
     "husky": "^4.3.8",
     "lint-staged": "^10.5.4",
     "lodash": "^4.17.21",
+    "netlify-cms-proxy-server": "^1.3.11",
+    "npm-run-all": "^4.1.5",
     "prettier": "2.2.1"
   },
   "husky": {
