--- a/admin/config.yml
+++ b/admin/config.yml
@@ -2,13 +2,13 @@ backend:
   name: github
   branch: master
   repo: jboolean/art-coop
-  site_domain: cms.netlify.com
+  # site_domain: cms.netlify.com
 
 publish_mode: editorial_workflow
 media_folder: assets/uploads
 public_folder: /assets/uploads
 show_preview_links: true
-local_backend: true
+# local_backend: true
 
 collections:
   - name: sections
