Disallow create/delete home page sections

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -18,6 +18,8 @@ collections:
     format: yaml-frontmatter
     sortable_fields: 
       - position
+    create: false
+    delete: false
     editor:
       preview: false
     fields:
