Move content into src/
There were getting to be a lot of top-level config files

--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -4,7 +4,7 @@ backend:
   repo: jboolean/art-coop
 
 publish_mode: editorial_workflow
-media_folder: assets/uploads
+media_folder: src/assets/uploads
 public_folder: /assets/uploads
 show_preview_links: true
 local_backend: true
