--- a/package.json
+++ b/package.json
@@ -24,11 +24,17 @@
   "homepage": "https://github.com/jboolean/art-coop#readme",
   "devDependencies": {
     "@11ty/eleventy": "^0.11.1",
+    "autoprefixer": "^10.2.4",
+    "cssnano": "^4.1.10",
     "husky": "^4.3.8",
+    "less": "^4.1.1",
     "lint-staged": "^10.5.4",
     "lodash": "^4.17.21",
     "netlify-cms-proxy-server": "^1.3.11",
+    "normalize.css": "^8.0.1",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.2.6",
+    "postcss-import": "^14.0.0",
     "prettier": "2.2.1"
   },
   "husky": {
@@ -38,5 +44,6 @@
   },
   "lint-staged": {
     "*.{js,html,json,yml,yaml,css,less,md}": "prettier --write"
-  }
+  },
+  "dependencies": {}
 }
