--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "less": "^4.1.1",
     "lint-staged": "^10.5.4",
     "lodash": "^4.17.21",
+    "markdown-it-link-attributes": "^3.0.0",
     "netlify-cms-proxy-server": "^1.3.11",
     "normalize.css": "^8.0.1",
     "npm-run-all": "^4.1.5",
+    "outdent": "^0.8.0",
     "postcss": "^8.2.6",
     "postcss-import": "^14.0.0",
     "prettier": "2.2.1"
