Fix concept summary -- field removed

--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -165,7 +165,7 @@ collections:
           - name: concepts
             label_singular: concept
             widget: list
-            summary: '{{conceptTitle}} / {{exampleTitle}}'
+            summary: '{{conceptTitle}}'
             fields:
               - name: conceptTitle
                 label: Concept title
