Add new collection reusing same sectional layout

--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -10,10 +10,39 @@ show_preview_links: true
 local_backend: true
 
 collections:
-  - name: sections
+  - name: home
     label: 'Home sections'
     label_singular: 'section'
-    folder: src/sections
+    folder: src/home
+    extension: md
+    format: yaml-frontmatter
+    sortable_fields:
+      - position
+    create: false
+    delete: false
+    editor:
+      preview: false
+    fields:
+      - name: title
+        label: Title
+        widget: string
+      - name: hideInNavigation
+        label: Hide in navigation
+        widget: boolean
+        required: false
+        default: false
+      - name: position
+        label: Display position
+        widget: number
+        min: 0
+        step: 1
+      - name: body
+        label: body
+        widget: markdown
+  - name: study
+    label: 'Study sections'
+    label_singular: 'section'
+    folder: src/study
     extension: md
     format: yaml-frontmatter
     sortable_fields:
