--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@11ty/eleventy": "^0.11.1",
     "autoprefixer": "^10.2.4",
     "cssnano": "^4.1.10",
+    "date-fns": "^2.22.1",
+    "date-fns-tz": "^1.1.4",
     "husky": "^4.3.8",
     "less": "^4.1.1",
     "lint-staged": "^10.5.4",
