Add plural concept titles to fix grammar in rotating text

--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -199,6 +199,10 @@ collections:
               - name: conceptTitle
                 label: Concept title
                 widget: string
+              - name: conceptTitlePlural
+                label: Concept Title (plural)
+                required: false
+                widget: string
               - name: conceptDescription
                 label: Concept description
                 widget: text
