Update event facilitators

--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -245,4 +245,4 @@ collections:
         required: false
       - name: body
         label: description
-        widget: text
+        widget: markdown
