Have captions appear around event events
Each event has own captions url

--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -246,3 +246,6 @@ collections:
       - name: body
         label: description
         widget: markdown
+      - name: captionEmbedUrl
+        label: Recapd Embed URL
+        widget: string
