--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -243,6 +243,13 @@ collections:
           - https?:\/\/(www\.)?[-a-zA-Z0-9@:%._\+~#=]{1,256}\.[a-zA-Z0-9()]{1,6}\b([-a-zA-Z0-9()@:%_\+.~#?&//=]*)
           - Must be a URL
         required: false
+      - name: recordingUrl
+        label: Recording URL
+        widget: string
+        pattern:
+          - https?:\/\/(www\.)?[-a-zA-Z0-9@:%._\+~#=]{1,256}\.[a-zA-Z0-9()]{1,6}\b([-a-zA-Z0-9()@:%_\+.~#?&//=]*)
+          - Must be a URL
+        required: false
       - name: body
         label: description
         widget: markdown
