--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@11ty/eleventy": "^0.11.1",
     "autoprefixer": "^10.2.4",
+    "axios": "^0.27.2",
     "cssnano": "^4.1.10",
     "date-fns": "^2.22.1",
     "date-fns-tz": "^1.1.4",
