--- a/package.json
+++ b/package.json
@@ -24,6 +24,12 @@
   "homepage": "https://github.com/jboolean/art-coop#readme",
   "devDependencies": {
     "@11ty/eleventy": "^0.11.1",
+    "@types/cssnano": "^5.1.0",
+    "@types/less": "^3.0.3",
+    "@types/lodash": "^4.14.182",
+    "@types/markdown-it-container": "^2.0.5",
+    "@types/postcss-import": "^14.0.0",
+    "@types/prettier": "2.2.1",
     "autoprefixer": "^10.2.4",
     "axios": "^0.27.2",
     "cssnano": "^4.1.10",
@@ -40,7 +46,8 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.2.6",
     "postcss-import": "^14.0.0",
-    "prettier": "2.2.1"
+    "prettier": "2.2.1",
+    "rss-parser": "^3.12.0"
   },
   "husky": {
     "hooks": {
