--- a/package.json
+++ b/package.json
@@ -52,5 +52,9 @@
     "*.{js,html,json,yml,yaml,css,less,md}": "prettier --write",
     "*.ejs": "prettier --write --parser html"
   },
-  "dependencies": {}
+  "dependencies": {
+    "dotenv": "^16.0.0",
+    "graphql": "^16.4.0",
+    "graphql-request": "^4.2.0"
+  }
 }
