--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "graphql": "^16.4.0",
-    "graphql-request": "^4.2.0"
+    "graphql-request": "^4.2.0",
+    "netlify-cms-oauth-provider-node": "^2.0.0"
   }
 }
