--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "eleventy-serve": "NODE_ENV=development eleventy --serve",
     "netlify-proxy": "netlify-cms-proxy-server",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "prettier --check . && prettier --check --parser html ../**/*.ejs",
-    "lint:fix": "prettier --write . && prettier --write --parser html ../**/*.ejs"
+    "lint": "prettier --check .",
+    "lint:fix": "prettier --write ."
   },
   "repository": {
     "type": "git",
@@ -29,6 +29,7 @@
     "cssnano": "^4.1.10",
     "date-fns": "^2.22.1",
     "date-fns-tz": "^1.1.4",
+    "ejs-lint": "^1.2.2",
     "husky": "^4.3.8",
     "less": "^4.1.1",
     "lint-staged": "^10.5.4",
@@ -50,7 +51,7 @@
   },
   "lint-staged": {
     "*.{js,html,json,yml,yaml,css,less,md}": "prettier --write",
-    "*.ejs": "prettier --write --parser html"
+    "*.ejs": "ejslint"
   },
   "dependencies": {
     "dotenv": "^16.0.0",
