--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "*.ejs": "ejslint"
   },
   "dependencies": {
+    "cross-fetch": "^3.1.5",
     "dotenv": "^16.0.0",
     "graphql": "^16.4.0",
     "graphql-request": "^4.2.0",
