Do not require alt text for now, as existing images are mostly missing it

--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -74,7 +74,7 @@ collections:
                 label: Alt text for hero image
                 hint: Alternative text description of image for screen readers
                 widget: string
-                required: true
+                required: false
               - name: url
                 label: Link
                 widget: string
