--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "memfs": "^3.4.7",
     "netlify-cms-app": "^2.15.72",
     "netlify-cms-proxy-server": "^1.3.11",
-    "netlify-cms-widget-markdown-toast-ui": "github:opencollective/netlify-cms-widget-markdown-toast-ui#node-18",
+    "netlify-cms-widget-markdown-toast-ui": "^0.1.0-1",
     "normalize.css": "^8.0.1",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.2.6",
