--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   "bugs": {
     "url": "https://github.com/jboolean/art-coop/issues"
   },
+  "engines": {
+    "node": "^18"
+  },
   "homepage": "https://github.com/jboolean/art-coop#readme",
   "devDependencies": {
     "@11ty/eleventy": "^0.11.1",
