Prevent github from disabling workflow after 60 days

--- a/.github/workflows/refresh-content.yml
+++ b/.github/workflows/refresh-content.yml
@@ -11,3 +11,5 @@ jobs:
         with:
           url: ${{ secrets.DEPLOY_TRIGGER_URL }}
           method: 'POST'
+      - name: keepalive
+        uses: gautamkrishnar/keepalive-workflow@v1
